# Bamboo

./: .gitignore
code/week01_A/: .gitignore  CMakeLists.txt  README.md  geo.h  test_bezier.cpp  test_bspline.cpp  test_nurbs.cpp
md/: 几何AI学习_v0_原始12周计划.md  几何AI学习_v1_双轨A与B版.md
md/AiLearn/.obsidian/: workspace.json
md/AiLearn/00纲要/: 几何AI学习_v2_A轨日常效率版.md
md/AiLearn/01Week/: 几何AI学习_v2_A轨第1周实操.md
